--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 <body>
     <header></header>
     <main>
-    <aside>    
-    </aside>
-    <section class="main-container">
-
+    <section class="perfil">
+        <div class="foto">
+            <img src="https://media.sitioandino.com.ar/p/f5cde63f3b0525901c71ea3d7b9189f2/adjuntos/335/imagenes/000/655/0000655994/790x0/smart/norbit-948288799-largejpg.jpg">
+        </div>
+        <div class="datos">
+            <h1>Milena Lopez</h1>
+            <p>Desarrolladora web</p>
+        </div>
     </section>
     </main>
+    <aside>
+        <section class="datosPersonales"></section>
+        <section class="redes"></section>
+        <section class="educacion"></section>
+    </aside>
     <footer></footer>
 </body>
 </html>
