--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link  rel="stylesheet" href="css/estiloCV.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Cv Milena López</title>
 </head>
 <body>
@@ -14,15 +15,54 @@
             <img src="https://media.sitioandino.com.ar/p/f5cde63f3b0525901c71ea3d7b9189f2/adjuntos/335/imagenes/000/655/0000655994/790x0/smart/norbit-948288799-largejpg.jpg">
         </div>
         <div class="datos">
-            <h1>Milena Lopez</h1>
-            <p>Desarrolladora web</p>
+            <h3>Milena Lopez</h3>
+            <h6>Desarrolladora web</h6>
         </div>
     </section>
     </main>
     <aside>
-        <section class="datosPersonales"></section>
-        <section class="redes"></section>
-        <section class="educacion"></section>
+        <section class="datosPersonales">
+            <h3>Datos Personales</h3>
+            <ul class="listaDP d-flex"> <!--Datos personales ul(lista desordenada) ol(lista numerica)-->
+                <li>
+                    <i class="fa-brands fa-github"></i></i></i>
+                    Milena Elizabeth López
+                </li>
+                <li>
+                    <i class="fa-solid fa-mobile-screen-button"></i></i>
+                    54 11 07483648
+                </li>
+                <li>
+                <a href="mailto:milenalopez937@gmail.com"><i class="fa-solid fa-envelope"></i>milenaLopez937@gmail.com</a>
+                </li>
+        </ul>  
+        </section>
+        <section class="redes">
+            <div>
+                <i class="fa-brands fa-instagram"></i>_milee001_
+            </div>
+            <div>
+                <i class="fa-brands fa-twitter"></i>Elizaa0025
+            </div>
+            <div>
+                <i class="fa-brands fa-discord"></i>eliza_97 
+            </div>
+            <div>
+                <i class="fa-brands fa-github"></i>milee025
+            </div>
+        </section>
+        <section class="educacion">
+            <h5>Aptitudes</h5>
+            <hr>
+            <h5>Licenciatura de software</h5>
+            <h2>Universidad unpaz</h2>
+            <h6>2026-2030</h6>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minus rerum mollitia ratione esse perferendis explicabo suscipit molestias non harum. Velit molestiae iusto sequi ipsum at excepturi, quis laborum rerum?</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas unde deserunt eligendi animi ea nemo debitis, accusantium corrupti, maiores sunt sint similique nobis omnis inventore magni, ex esse tempore et!</li>
+            </ul>
+
+        </section>
     </aside>
     <footer></footer>
 </body>
