--- a/index.html
+++ b/index.html
@@ -19,6 +19,57 @@
             <h6>Desarrolladora web</h6>
         </div>
     </section>
+    <section class="contenedorFlexbox">
+        <article class="tarjeta">
+            <div class="tarjetaTitulo">
+                <h2>Experiencia Laboral</h2>
+            </div>
+            <div class="tarjetaContenido">
+                <h3>Desarrollador Web</h3>
+                <h4>Empresa: Google</h4>
+                <h5>2015 - 2021</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reprehenderit laboriosam corrupti
+                </p>
+            </div>
+        </article>
+        <article class="tarjeta">
+            <div class="tarjetaTitulo">
+                <h2>Experiencia Laboral</h2>
+            </div>
+            <div class="tarjetaContenido">
+                <h3>Desarrollador Web</h3>
+                <h4>Empresa: Google</h4>
+                <h5>2015 - 2021</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reprehenderit laboriosam corrupti
+                </p>
+            </div>
+        </article>
+        <article class="tarjeta">
+            <div class="tarjetaTitulo">
+                <h2>Experiencia Laboral</h2>
+            </div>
+            <div class="tarjetaContenido">
+                <h3>Desarrollador Web</h3>
+                <h4>Empresa: Google</h4>
+                <h5>2015 - 2021</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reprehenderit laboriosam corrupti
+                </p>
+            </div>
+        </article>
+        <article class="tarjeta">
+            <div class="tarjetaTitulo">
+                <h2>Experiencia Laboral</h2>
+            </div>
+            <div class="tarjetaContenido">
+                <h3>Desarrollador Web</h3>
+                <h4>Empresa: Google</h4>
+                <h5>2015 - 2021</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reprehenderit laboriosam corrupti
+                </p>
+            </div>
+        </article>
+    </section>
+    
     </main>
     <aside>
         <section class="datosPersonales">
@@ -52,10 +103,14 @@
             </div>
         </section>
         <section class="educacion">
-            <h5>Aptitudes</h5>
+            <h3>Aptitudes</h3>
             <hr>
-            <h5>Licenciatura de software</h5>
-            <h2>Universidad unpaz</h2>
+            
+            <h4>Escuela Educacion tecnica N°3</h4>
+            <h6>2019-2025</h6>
+            <h5>Tecnicatura en informatica profesional y personal</h5>
+            <h4>Universidad UNGS</h4>
+            <h5>Licenciatura en sistemas</h5>
             <h6>2026-2030</h6>
             <ul>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minus rerum mollitia ratione esse perferendis explicabo suscipit molestias non harum. Velit molestiae iusto sequi ipsum at excepturi, quis laborum rerum?</li>
