--- a/index.html
+++ b/index.html
@@ -9,70 +9,17 @@
 </head>
 <body>
     <header></header>
-    <main>
-    <section class="perfil">
-        <div class="foto">
-            <img src="https://media.sitioandino.com.ar/p/f5cde63f3b0525901c71ea3d7b9189f2/adjuntos/335/imagenes/000/655/0000655994/790x0/smart/norbit-948288799-largejpg.jpg">
-        </div>
-        <div class="datos">
-            <h3>Milena Lopez</h3>
-            <h6>Desarrolladora web</h6>
-        </div>
-    </section>
-    <section class="contenedorFlexbox">
-        <article class="tarjeta">
-            <div class="tarjetaTitulo">
-                <h2>Experiencia Laboral</h2>
-            </div>
-            <div class="tarjetaContenido">
-                <h3>Desarrollador Web</h3>
-                <h4>Empresa: Google</h4>
-                <h5>2015 - 2021</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reprehenderit laboriosam corrupti
-                </p>
-            </div>
-        </article>
-        <article class="tarjeta">
-            <div class="tarjetaTitulo">
-                <h2>Experiencia Laboral</h2>
-            </div>
-            <div class="tarjetaContenido">
-                <h3>Desarrollador Web</h3>
-                <h4>Empresa: Google</h4>
-                <h5>2015 - 2021</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reprehenderit laboriosam corrupti
-                </p>
-            </div>
-        </article>
-        <article class="tarjeta">
-            <div class="tarjetaTitulo">
-                <h2>Experiencia Laboral</h2>
-            </div>
-            <div class="tarjetaContenido">
-                <h3>Desarrollador Web</h3>
-                <h4>Empresa: Google</h4>
-                <h5>2015 - 2021</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reprehenderit laboriosam corrupti
-                </p>
-            </div>
-        </article>
-        <article class="tarjeta">
-            <div class="tarjetaTitulo">
-                <h2>Experiencia Laboral</h2>
-            </div>
-            <div class="tarjetaContenido">
-                <h3>Desarrollador Web</h3>
-                <h4>Empresa: Google</h4>
-                <h5>2015 - 2021</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reprehenderit laboriosam corrupti
-                </p>
-            </div>
-        </article>
-    </section>
-    
-    </main>
     <aside>
         <section class="datosPersonales">
+            <section class="perfil">
+                <div class="foto">
+                    <img src="https://media.discordapp.net/attachments/1233866175776161794/1353802517024210965/15_sin_titulo_20250318222030.jpg?ex=67e2fa58&is=67e1a8d8&hm=fc03ea90161240578ed09eb160b3aa60e813cb7d7e784ef1cf5a05bd3e970527&=&format=webp">
+                </div>
+                <div class="datos">
+                    <h3>Milena Lopez</h3>
+                    <h6>Desarrolladora web</h6>
+                </div>
+            </section>
             <h3>Datos Personales</h3>
             <ul class="listaDP d-flex"> <!--Datos personales ul(lista desordenada) ol(lista numerica)-->
                 <li>
@@ -89,6 +36,8 @@
         </ul>  
         </section>
         <section class="redes">
+            <h3>Redes</h3>
+            <br>
             <div>
                 <i class="fa-brands fa-instagram"></i>_milee001_
             </div>
@@ -119,6 +68,12 @@
 
         </section>
     </aside>
+    <main>
+        <section class="info">
+            <h2>Sobre mi</h2>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit rem odit asperiores expedita modi eos sint temporibus veritatis cupiditate quidem quo alias rerum ipsa tempore ab, reiciendis explicabo perspiciatis reprehenderit.</h5>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
