--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                     <h6>Desarrolladora web</h6>
                 </div>
             </section>
-            <h3>Datos Personales</h3>
+            <div class="linea">
+            <h3>Datos Personales</h3><div class="barra"></div>
+            </div>
             <ul class="listaDP d-flex"> <!--Datos personales ul(lista desordenada) ol(lista numerica)-->
                 <li>
                     <i class="fa-brands fa-github"></i></i></i>
@@ -37,7 +39,9 @@
         </ul>  
         </section>
         <section class="redes">
-            <h3>Redes</h3>
+            <div class="linea">
+                <h3>Redes</h3><div class="barra"></div>
+            </div><br>
             <br>
             <div>
                 <i class="fa-brands fa-instagram"></i>_milee001_
@@ -53,26 +57,33 @@
             </div>
         </section>
         <section class="educacion">
-            <h3>Aptitudes</h3>
-            <hr>
-            
-            <h4>Escuela Educacion tecnica N°3</h4>
-            <h6>2019-2025</h6>
+            <div class="linea">
+            <h3>Educación</h3><div class="barra"></div>
+            </div><br>
+            <h4>Escuela Educacion tecnica N°3 2019-2025</h4>
             <h5>Tecnicatura en informatica profesional y personal</h5>
-            <h4>Universidad UNGS</h4>
+            <h4>Universidad UNGS 2026-2030</h4>
             <h5>Licenciatura en sistemas</h5>
-            <h6>2026-2030</h6>
-            <ul>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minus rerum mollitia ratione esse perferendis explicabo suscipit molestias non harum. Velit molestiae iusto sequi ipsum at excepturi, quis laborum rerum?</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas unde deserunt eligendi animi ea nemo debitis, accusantium corrupti, maiores sunt sint similique nobis omnis inventore magni, ex esse tempore et!</li>
-            </ul>
-
         </section>
     </aside>
     <main>
         <section class="info">
-            <h2>Sobre mi</h2>
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit rem odit asperiores expedita modi eos sint temporibus veritatis cupiditate quidem quo alias rerum ipsa tempore ab, reiciendis explicabo perspiciatis reprehenderit.</h5>
+            <h2><span>Sobre mi</span></h2>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid delectus facere ipsam necessitatibus. Fugit numquam magni sit laboriosam eius consequuntur. Eos ipsam magnam iste in atque tenetur nobis nemo modi!
+            Nulla eius fuga itaque saepe, debitis culpa molestias error natus quibusdam magni consequuntur voluptatibus voluptatem voluptas cum illo fugiat, magnam accusamus totam facere nihil similique soluta aliquid. Sint, eligendi nihil.</h5>
+        </section>
+        <section class="experiencia">
+            <div class="linea">
+            <h3>Experiencia laboral </h3><div class="barra"></div>
+        </div>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque similique rerum maxime asperiores, sit quia deserunt numquam delectus suscipit incidunt ullam ad cumque corporis adipisci, unde libero doloribus? Harum, animi.
+            Dolores, tempora! Nostrum quasi temporibus recusandae cupiditate quam ea eligendi, unde deserunt! Cum quae, minus soluta voluptate perspiciatis labore praesentium vel distinctio quasi iusto neque nesciunt, ipsam officia totam veritatis?</h5>
+        </section>
+        <section class="lenguajes">
+            <div class="linea">
+            <h3>Lenguajes de programación</h3><div class="barra"></div>
+        </div>
+           
         </section>
     </main>
     <footer></footer>
