--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
                     <h6>Desarrolladora web</h6>
                 </div>
             </section>
-            <div class="linea">
-            <h3>Datos Personales</h3><div class="barra"></div>
-            </div>
+            <h3>Datos Personales</h3>
             <ul class="listaDP d-flex"> <!--Datos personales ul(lista desordenada) ol(lista numerica)-->
                 <li>
                     <i class="fa-brands fa-github"></i></i></i>
@@ -39,9 +37,7 @@
         </ul>  
         </section>
         <section class="redes">
-            <div class="linea">
-                <h3>Redes</h3><div class="barra"></div>
-            </div><br>
+                <h3>Redes</h3>
             <br>
             <div>
                 <i class="fa-brands fa-instagram"></i>_milee001_
@@ -57,9 +53,8 @@
             </div>
         </section>
         <section class="educacion">
-            <div class="linea">
-            <h3>Educación</h3><div class="barra"></div>
-            </div><br>
+            <h3>Educación</h3>
+            <br>
             <h4>Escuela Educacion tecnica N°3 2019-2025</h4>
             <h5>Tecnicatura en informatica profesional y personal</h5>
             <h4>Universidad UNGS 2026-2030</h4>
@@ -83,7 +78,12 @@
             <div class="linea">
             <h3>Lenguajes de programación</h3><div class="barra"></div>
         </div>
-           
+        <div class="iconL">
+           <div class="box">PHP</div>
+           <div class="box">JS</div>
+           <div class="box">SQL</div>
+           <div class="box">Py</div>
+        </div>
         </section>
     </main>
     <footer></footer>
