--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section class="datosPersonales">
             <section class="perfil">
                 <div class="foto">
-                    <img src="https://media.discordapp.net/attachments/1233866175776161794/1353802517024210965/15_sin_titulo_20250318222030.jpg?ex=67e2fa58&is=67e1a8d8&hm=fc03ea90161240578ed09eb160b3aa60e813cb7d7e784ef1cf5a05bd3e970527&=&format=webp">
+                    <img src="css/imagenes/fotoCv.jpg">
                 </div>
                 <div class="datos">
                     <h3>Milena Lopez</h3>
@@ -64,16 +64,21 @@
     <main>
         <section class="info">
             <h2><span>Sobre mi</span></h2>
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid delectus facere ipsam necessitatibus. Fugit numquam magni sit laboriosam eius consequuntur. Eos ipsam magnam iste in atque tenetur nobis nemo modi!
-            Nulla eius fuga itaque saepe, debitis culpa molestias error natus quibusdam magni consequuntur voluptatibus voluptatem voluptas cum illo fugiat, magnam accusamus totam facere nihil similique soluta aliquid. Sint, eligendi nihil.</h5>
+            <p>Soy una entusiasta del desarrollo web con una fuerte base en programación y bases de datos. Me apasiona la creación de aplicaciones eficientes y escalables, combinando PHP, JavaScript, SQL y Python para desarrollar soluciones robustas. Me considero una persona proactiva, con gran capacidad de aprendizaje y adaptabilidad a nuevos desafíos. Disfruto trabajar en equipo y aportar ideas innovadoras que mejoren la experiencia del usuario. Busco mi primera oportunidad como desarrolladora web junior en un entorno dinámico donde pueda seguir creciendo y aportando valor.  </p>
         </section>
         <section class="experiencia">
             <div class="linea">
             <h3>Experiencia laboral </h3><div class="barra"></div>
         </div>
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque similique rerum maxime asperiores, sit quia deserunt numquam delectus suscipit incidunt ullam ad cumque corporis adipisci, unde libero doloribus? Harum, animi.
-            Dolores, tempora! Nostrum quasi temporibus recusandae cupiditate quam ea eligendi, unde deserunt! Cum quae, minus soluta voluptate perspiciatis labore praesentium vel distinctio quasi iusto neque nesciunt, ipsam officia totam veritatis?</h5>
-        </section>
+            <p>Desarrolladora Web Junior – Tech Solutions (Abr 2023 - Actualidad) 
+                <ul>
+                 Desarrollé y optimicé funcionalidades en aplicaciones web utilizando PHP y JavaScript, mejorando la experiencia del usuario.  
+                 <li> bases de datos en SQL, optimizando consultas y asegurando la integridad de la información.</li>
+                 <li>Implementé automatizaciones con Python para agilizar procesos internos y mejorar la eficiencia del equipo. </li>
+                 <li>Trabajé en la integración de APIs y servicios externos, garantizando la correcta comunicación entre sistemas. </li>
+                 <li>Colaboré con el equipo de diseño y desarrollo en la implementación de nuevas características y resolución de bugs.</li>  </p>
+            </ul>
+            </section>
         <section class="lenguajes">
             <div class="linea">
             <h3>Lenguajes de programación</h3><div class="barra"></div>
