--- a/index.html
+++ b/index.html
@@ -1,98 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" href="css/estiloCV.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Cv Milena López</title>
+    <title>Portafolios de Milena</title>
 </head>
 <body>
-    <header></header>
-    <aside>
-        <section class="datosPersonales">
-            <section class="perfil">
-                <div class="foto">
-                    <img src="css/imagenes/fotoCv.jpg">
-                </div>
-                <div class="datos">
-                    <h3>Milena Lopez</h3>
-                    <h6>Desarrolladora web</h6>
-                </div>
-            </section>
-            <h3>Datos Personales</h3>
-            <ul class="listaDP d-flex"> <!--Datos personales ul(lista desordenada) ol(lista numerica)-->
-                <li>
-                    <i class="fa-brands fa-github"></i></i></i>
-                    Milena Elizabeth López
-                </li>
-                <li>
-                    <i class="fa-solid fa-mobile-screen-button"></i></i>
-                    54 11 07483648
-                    
-                </li>
-                <li>
-                <a href="mailto:milenalopez937@gmail.com"><i class="fa-solid fa-envelope"></i>milenaLopez937@gmail.com</a>
-                </li>
-        </ul>  
-        </section>
-        <section class="redes">
-                <h3>Redes</h3>
-            <br>
-            <div>
-                <i class="fa-brands fa-instagram"></i>_milee001_
-            </div>
-            <div>
-                <i class="fa-brands fa-twitter"></i>Elizaa0025
-            </div>
-            <div>
-                <i class="fa-brands fa-discord"></i>eliza_97 
-            </div>
-            <div>
-                <i class="fa-brands fa-github"></i>milee025
-            </div>
-        </section>
-        <section class="educacion">
-            <h3>Educación</h3>
-            <br>
-            <h4>Escuela Educacion tecnica N°3 2019-2025</h4>
-            <h5>Tecnicatura en informatica profesional y personal</h5>
-            <h4>Universidad UNGS 2026-2030</h4>
-            <h5>Licenciatura en sistemas</h5>
-        </section>
-    </aside>
-    <main>
-        <section class="info">
-            <h2><span>Sobre mi</span></h2>
-            <br>
-            <p>Soy una entusiasta del desarrollo web con una fuerte base en programación y bases de datos. Me apasiona la creación de aplicaciones eficientes y escalables, combinando PHP, JavaScript, SQL y Python para desarrollar soluciones robustas. Me considero una persona proactiva, con gran capacidad de aprendizaje y adaptabilidad a nuevos desafíos. Disfruto trabajar en equipo y aportar ideas innovadoras que mejoren la experiencia del usuario. Busco mi primera oportunidad como desarrolladora web junior en un entorno dinámico donde pueda seguir creciendo y aportando valor.  </p>
-        </section>
-        <section class="experiencia">
-            <div class="linea">
-            <h3>Experiencia laboral </h3><div class="barra"></div>
-        </div>
-        <br>
-            <p>Desarrolladora Web Junior – Tech Solutions (Abr 2023 - Actualidad) 
-                <ul>
-                 Desarrollé y optimicé funcionalidades en aplicaciones web utilizando PHP y JavaScript, mejorando la experiencia del usuario.  
-                 <li> bases de datos en SQL, optimizando consultas y asegurando la integridad de la información.</li>
-                 <li>Implementé automatizaciones con Python para agilizar procesos internos y mejorar la eficiencia del equipo. </li>
-                 <li>Trabajé en la integración de APIs y servicios externos, garantizando la correcta comunicación entre sistemas. </li>
-                 <li>Colaboré con el equipo de diseño y desarrollo en la implementación de nuevas características y resolución de bugs.</li>  </p>
-            </ul>
-            </section>
-        <section class="lenguajes">
-            <div class="linea">
-            <h3>Lenguajes de programación</h3><div class="barra"></div>
-        </div>
-        <div class="iconL">
-           <div class="box">PHP</div>
-           <div class="box">JS</div>
-           <div class="box">SQL</div>
-           <div class="box">Py</div>
-        </div>
-        </section>
-    </main>
-    <footer></footer>
+    <h1>Portafolios de Milena</h1>
+    <p>Bienvenido a la pagina de portafolios de Milena López. Aquí podrás encontrar información sobre mis trabajos Práctivos y Proyectos</p>
+    <h2>Trabajos Prácticos</h2>
+    <ol>
+        <li><a href="to0/index.html" tarjet="_blank">Diseño Curriculum</a></li>
+        <li><a href="tp01_Tarjeta/tarjeta.html" tarjet="_blank">Tarjeta Figma</a></li>
+        <li>Consultora tecnológica</li>
+    </ol>
 </body>
 </html>
