modificacion al css

--- a/tp01_Tarjeta/tarjeta.html
+++ b/tp01_Tarjeta/tarjeta.html
@@ -6,22 +6,40 @@
     <title>Tp01 Tarjeta Figma</title>
     <link rel="stylesheet" href="css/estiloTarjeta.css">
 </head>
-<body>
+<body class="nunito">
     <h3 class="texto-blanco  bebas-neue-regular">Tarjeta Figma | 1° de abril del 2025</h3>
     <section class="contenedor">
         <article class="tarjeta">
+            <div class="sombra"></div>
             <section class="cabecera">
                 <div class="fotoPerfil">
-                   <img src="https://randomuser.me/api/portraits/women/17.jpg">
+                   <img src="https://i.pravatar.cc/150?img=21">
                 </div>
                 <div class="datos">
-                    <h2>Leslie Wilson</h2>
-                    <h6>@lesliewilson</h6>
+                    <h2>Aloy Hoekstra</h2>
+                    <h5>@aloy</h5>
                     <h5>Desarrolladora inmobilaria</h5>
                 </div>
             </section>
             <section class="data">
-                <div class="cuadrado nunito">+</div>
+                <section class="numberData">
+                    <div class="likes ">
+                        <h3>13</h3>
+                        <legend>Likes</legend>
+                    </div>
+                    <div class="seguidos oswald">
+                        <h3>123</h3>
+                        <legend>Following</legend>
+                    </div>
+                    <div class="seguidores oswald">
+                        <h3>347</h3>
+                        <legend>Followers</legend>
+                    </div>
+                </section>
+                    <a href="#" id="button">Enviar mensaje</a>
+                    <a href="#" id="info">Más info</a>
+
+                <div class="cuadrado">+</div>
             </section>
         </article>
         </article>
