modificacion al portafolio

--- a/index.html
+++ b/index.html
@@ -4,15 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolios de Milena</title>
+    <link  rel="stylesheet" href="estilo.css">
 </head>
-<body>
-    <h1>Portafolios de Milena</h1>
-    <p>Bienvenido a la pagina de portafolios de Milena López. Aquí podrás encontrar información sobre mis trabajos Práctivos y Proyectos</p>
-    <h2>Trabajos Prácticos</h2>
-    <ol>
-        <li><a href="to0/index.html" tarjet="_blank">Diseño Curriculum</a></li>
-        <li><a href="tp01_Tarjeta/tarjeta.html" tarjet="_blank">Tarjeta Figma</a></li>
-        <li>Consultora tecnológica</li>
-    </ol>
+<body class="roboto-mono">
+    <div class="texto">
+        <h1>Portafolios de <span>Milena</span></h1>
+        <p>Bienvenido a la pagina de portafolios de Milena López. Aquí podrás encontrar información sobre mis trabajos Práctivos y Proyectos</p>
+        <h2>Trabajos Prácticos</h2>
+    </div>
+    <section class="contenedor">
+        <a href="tp0/index.html" tarjet="_blank">
+            <article class="tarjeta">
+                <section class="titulo">
+                    <h4><span>Tp 00|</span>Curriculum</h4>
+                </section>
+                <section class="imagen">
+                    <img src="assets/imagenes/cv.png">
+                </section>
+                <section class="descripcion">
+                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed dolores mollitia vitae, quod harum odit consequatur vel quo molestiae, provident maiores, voluptatibus libero quibusdam? Debitis aspernatu</p>
+                </section>
+        </a>
+        </article>
+
+        <a href="tp01_Tarjeta/tarjeta.html" tarjet="_blank">
+            <article class="tarjeta">
+                <section class="titulo">
+                    <h4><span>Tp 01|</span>Tarjeta</h4>
+                </section>
+                <section class="imagen">
+                    <img src="assets/imagenes/tarjeta.png">
+                </section>
+                <section class="descripcion">
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique distinctio atque cumque, quia ratione excepturi vitae? Sed nam rem soluta iste porro similique quod dicta, voluptates delenit</p>
+                </section>
+        </a>
+        </article>
+    </section>
 </body>
 </html>
