avance de pagina principal

--- a/tp02/paginaPrincipal.html
+++ b/tp02/paginaPrincipal.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <main>
-        <header><i class="fa-regular fa-bars"></i><span>Modix.</span><i class="fa-regular fa-cart-shopping"></i><i class="fa-regular fa-magnifying-glass"></i></header>
+        <header><i class="fa-regular fa-bars"></i><span>Modix.</span>
+            <div class="items">
+            <i class="fa-regular fa-cart-shopping"></i><i class="fa-regular fa-magnifying-glass"></i></header>
+            </div>
         <section class="categorias">
             <span>Nuevo</span>
             <span>Tendencia</span>
