agregar tp a repositorio

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique distinctio atque cumque, quia ratione excepturi vitae? Sed nam rem soluta iste porro similique quod dicta, voluptates delenit</p>
                 </section>
         </a>
+        <a href="tp02/iniciarSesion.html" tarjet="_blank">
+            <article class="tarjeta">
+                <section class="titulo">
+                    <h4><span>Tp 02|</span>Modix.</h4>
+                </section>
+                <section class="imagen">
+                    <img src="assets/imagenes/tarjeta.png">
+                </section>
+                <section class="descripcion">
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique distinctio atque cumque, quia ratione excepturi vitae? Sed nam rem soluta iste porro similique quod dicta, voluptates delenit</p>
+                </section>
+        </a>
         </article>
     </section>
 </body>
