--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </article>
         </a>
         
-        <a href="tp02/iniciarSesion.html" tarjet="_blank">
+        <a href="tp02/IniciarSesion.html" tarjet="_blank">
             <article class="tarjeta">
                 <section class="titulo">
                     <h4><span>Tp 02|</span>Modix.</h4>
