--- a/tp02/IniciarSesion.html
+++ b/tp02/IniciarSesion.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/inicioS.css">
+    <link rel="stylesheet" href="../assets/css/tipografias.css">
     <title>Login</title>
 </head>
 <body>
     <main>
-        <section class="logo">
-            <h1>Modix.</h1>
+        <section id="logo"class="logo">
+            <span class="sedgwick-ave-display-regular">Modix.</span>
         </section>
         <section class="formulario">
             <input type="text" class="usuario">
