--- a/tp02/paginaPrincipal.html
+++ b/tp02/paginaPrincipal.html
@@ -4,50 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/pp.css">
+    <link rel="stylesheet" href="../assets/css/tipografias.css">
     <title>Home</title>
 </head>
 <body>
     <main>
-        <header><i class="fa-regular fa-bars"></i><span>Modix.</span>
+        <header><i class="fa-regular fa-bars"></i><span id="logo" class="sedgwick-ave-display-regular">Modix.</span>
             <div class="items">
             <i class="fa-regular fa-cart-shopping"></i><i class="fa-regular fa-magnifying-glass"></i></header>
             </div>
         <section class="categorias">
-            <span>Nuevo</span>
-            <span>Tendencia</span>
-            <span>Oferta</span>
+            <span id="cate" class="unica-one-regular">Nuevo</span>
+            <span id="cat" class="unica-one-regular">Tendencia</span>
+            <span id="cat" class="unica-one-regular" >Oferta</span>
         </section>
         <section class="contenedorProductos">
-            <article class="producto1">
+
+            <article class="producto">
                 <section class="imagen">
                     <img src="css/imgs/img1.webp">
                 </section>
                 <section class="descripcion">
-                    <span class="nombre">FALDA MIDI TEXAS MARRON</span>
-                    <span class="precio">$79.000</span>
-                    <span class="cuotas">6 cuotas sin interés de $13.166,67</span>
+                    <span class="nombre k2d-regular">FALDA MIDI TEXAS MARRON</span>
+                    <span class="precio k2d-regular">$79.000</span>
+                    <span class="cuotas k2d-regular">6 cuotas sin interés de $13.166,67</span>
                 </section>
             </article>
-            <article class="producto2">
-                <section class="imagen">
+
+            <article class="producto">
+                <section class="descripcion">
+                    <span class="nombre k2d-regular">CAMPERON TEDDY GRIS</span>
+                    <span class="precio k2d-regular">$79.000</span>
+                    <span class="cuotas k2d-regular">6 cuotas sin interés de $13.166,67</span>
+                </section>
+                 <section class="imagen">
                     <img src="css/imgs/img5.webp">
                 </section>
-                <section class="descripcion">
-                    <span class="nombre">CAMPERON TEDDY GRIS</span>
-                    <span class="precio">$79.000</span>
-                    <span class="cuotas">6 cuotas sin interés de $13.166,67</span>
-                </section>
             </article>
-            <article class="producto3">
+
+            <article class="producto">
                 <section class="imagen">
                     <img src="css/imgs/img4.webp">
                 </section>
                 <section class="descripcion">
-                    <span class="nombre">POLERA MORLEY DE LANA NEGRO</span>
-                    <span class="precio">$39.000</span>
-                    <span class="cuotas">6 cuotas sin interés de $6.500s</span>
+                    <span class="nombre k2d-regular">POLERA MORLEY DE LANA NEGRO</span>
+                    <span class="precio k2d-regular">$39.000</span>
+                    <span class="cuotas k2d-regular">6 cuotas sin interés de $6.500s</span>
                 </section>
             </article>
+
         </section>
     </main>
 </body>
