--- a/tp02/IniciarSesion.html
+++ b/tp02/IniciarSesion.html
@@ -13,9 +13,11 @@
             <span class="sedgwick-ave-display-regular">Modix.</span>
         </section>
         <section class="formulario">
-            <input type="text" class="usuario">
-            <input type="pass" class="contra">
-            <a href="home.html" class="btn">Iniciar Sesión</a>
+            <i class="fa-solid fa-circle-user"></i>
+            <input type="text" class="usuario" placeholder="Usuario">
+            <i class="fa-solid fa-lock"></i>
+            <input type="password" class="contra"placeholder="Contraseña">
+            <a href="paginaPrincipal.html" class="btn">Iniciar Sesión</a>
             <a href="registrar.html" class="registrar">¿No tienes una cuenta?<span>Registrate</span></span></a>
         </section>
     </main>
