diseño login-register

--- a/tp02/IniciarSesion.html
+++ b/tp02/IniciarSesion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/inicioS.css">
     <link rel="stylesheet" href="../assets/css/tipografias.css">
-    <title>Login</title>
+    <title>Iniciar Sesión</title>
 </head>
 <body>
     <main>
@@ -17,8 +17,8 @@
             <input type="text" class="usuario" placeholder="Usuario">
             <i class="fa-solid fa-lock"></i>
             <input type="password" class="contra"placeholder="Contraseña">
-            <a href="paginaPrincipal.html" class="btn">Iniciar Sesión</a>
-            <a href="registrar.html" class="registrar">¿No tienes una cuenta?<span>Registrate</span></span></a>
+            <a href="paginaPrincipal.html" class="btn k2d-regular">Iniciar Sesión</a>
+            <a href="registrar.html" class="cambiar k2d-regular">¿No tienes una cuenta?<span class="reg">Registrate</span></span></a>
         </section>
     </main>
 </body>
