--- a/tp02/paginaPrincipal.html
+++ b/tp02/paginaPrincipal.html
@@ -17,9 +17,10 @@
             <span id="cate" class="unica-one-regular">Nuevo</span>
             <span id="cat" class="unica-one-regular">Tendencia</span>
             <span id="cat" class="unica-one-regular" >Oferta</span>
+            
         </section>
         <section class="contenedorProductos">
-
+            <a href="detallesProducto.html">
             <article class="producto">
                 <section class="imagen">
                     <img src="css/imgs/img1.webp">
@@ -30,15 +31,37 @@
                     <span class="cuotas k2d-regular">6 cuotas sin interés de $13.166,67</span>
                 </section>
             </article>
-
+            </a>
             <article class="producto">
+                <section class="imagen">
+                    <img src="css/imgs/img5.webp">
+                </section>
                 <section class="descripcion">
                     <span class="nombre k2d-regular">CAMPERON TEDDY GRIS</span>
                     <span class="precio k2d-regular">$79.000</span>
                     <span class="cuotas k2d-regular">6 cuotas sin interés de $13.166,67</span>
                 </section>
-                 <section class="imagen">
-                    <img src="css/imgs/img5.webp">
+            </article>
+
+            <article class="producto">
+                <section class="imagen">
+                    <img src="css/imgs/img4.webp">
+                </section>
+                <section class="descripcion">
+                    <span class="nombre k2d-regular">POLERA MORLEY DE LANA NEGRO</span>
+                    <span class="precio k2d-regular">$39.000</span>
+                    <span class="cuotas k2d-regular">6 cuotas sin interés de $6.500s</span>
+                </section>
+            </article>
+
+            <article class="producto">
+                <section class="imagen">
+                    <img src="css/imgs/img4.webp">
+                </section>
+                <section class="descripcion">
+                    <span class="nombre k2d-regular">POLERA MORLEY DE LANA NEGRO</span>
+                    <span class="precio k2d-regular">$39.000</span>
+                    <span class="cuotas k2d-regular">6 cuotas sin interés de $6.500s</span>
                 </section>
             </article>
 
