--- a/tp02/registrar.html
+++ b/tp02/registrar.html
@@ -13,16 +13,17 @@
             <span class="sedgwick-ave-display-regular">Modix.</span>
         </section>
         <section class="formulario">
-
+            
             <i class="fa-solid fa-circle-user"></i>
             <input type="text" class="usuario" placeholder="Usuario">
 
             <i class="fa-solid fa-lock"></i>
             <input type="password" class="contra"placeholder="Contraseña">
 
+            <div class="contenedor">
             <i id="lock2" class="fa-solid fa-lock"></i>
-            <input type="password" class="contra"placeholder="Repite la contraseña">
-
+            <input type="password" class="repetir"placeholder="Repite la contraseña">
+            </div>
             <a href="paginaPrincipal.html" class="btn k2d-regular">Iniciar Sesión</a>
             <a href="IniciarSesion.html" class="cambiar k2d-regular">Ya tienes una cuenta?<span class="reg">Inicia Sesión</span></span></a>
         </section>
