--- a/tp02/detallesProducto.html
+++ b/tp02/detallesProducto.html
@@ -6,11 +6,18 @@
     <title>Detalles</title>
     <link rel="stylesheet" href="css/detalles.css">
     <link rel="stylesheet" href="../assets/css/tipografias.css">
+    <link rel="stylesheet" href="../assets/css/fawesome-all.css">
 </head>
 <body>
     <main>
             <section class="contenidoDetalles">
-                <header><i class="fa-regular fa-bars"></i><span id="logo" class="sedgwick-ave-display-regular">Modix.</span></header>
+                <header>
+                    <a href="paginaPrincipal.html"><i class="fa-regular fa-bars"></i></a>
+                        <span id="logo" class="sedgwick-ave-display-regular">Modix.</span>
+                        <div class="items">
+                            <i class="fa-regular fa-cart-shopping"></i><i class="fa-regular fa-magnifying-glass"></i></header>
+                        </div>
+                    </header>
                 <section class="contenedorImagenes">
                     <div class="sliderImg">
                         <div class="slider">
@@ -26,10 +33,31 @@
                     </div>
                 </section>
                 <section class="precio">
-
+                    <span class="nombreP k2d-regular">FALDA MIDI TEXAS MARRON</span>
+                    <span class="cuotas k2d-regular">6 cuotas sin interés de $13.166,67</span>
                 </section>
+                <section class="detalles">
+                    <span class="envios k2d-regular">Envío gratis superando los $197.999</span>
+                    <span class="color k2d-regular">Color: marrón</span>
+                    <section class="talles">
+                        <span class="t k2d-regular">Talles</span>
+                            <section class="contenedorC">
+                                <div class="circulo k2d-regular">XS</div>
+                                <div class="circulo k2d-regular">S</div>
+                                <div class="circulo k2d-regular">M</div>
+                                <div class="circulo k2d-regular">L</div>
+                                <div class="circulo k2d-regular">XXL</div>
+                            </section>
+                        </section>
+                        <section class="guia">
+                            <i class="fa-regular fa-ruler-horizontal"></i><span class="g k2d-regular">Guia de talles</span>
+                        </section>
+                    </section>
+                    <button class="k2d-regular">Agregar al carrito</button>
                 <section class="medios">
-
+                    <div class="medio k2d-regular"><i class="fa-regular fa-credit-card"></i>Medios de pago</div>
+                    <div class="medio k2d-regular"><i class="fa-regular fa-truck-fast"></i>Medios de envio</div>
+                    <div class="medio k2d-regular"><i class="fa-solid fa-shop"></i>Nuestros locales</div>
                 </section>
             </section>
             
