imagen de modix

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h4><span>Tp 02|</span>Modix.</h4>
                 </section>
                 <section class="imagen">
-                    <img src="assets/imagenes/tarjeta.png">
+                    <img src="assets/imagenes/modix.jpg">
                 </section>
                 <section class="descripcion">
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique distinctio atque cumque, quia ratione excepturi vitae? Sed nam rem soluta iste porro similique quod dicta, voluptates delenit</p>
