--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
                 </section>
             </article>
         </a>
+
+        <a href="tp03/presentacion.html" tarjet="_blank">
+            <article class="tarjeta">
+                <section class="titulo">
+                    <h4><span>Tp 03|</span>Shoku.</h4>
+                </section>
+                <section class="imagen">
+                    <img src="assets/imagenes/modix.jpg">
+                </section>
+                <section class="descripcion">
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique distinctio atque cumque, quia ratione excepturi vitae? Sed nam rem soluta iste porro similique quod dicta, voluptates delenit</p>
+                </section>
+            </article>
+        </a>
     </section>
 </body>
 </html>
