--- a/tp03/detallesRestaurante.html
+++ b/tp03/detallesRestaurante.html
@@ -6,5 +6,22 @@
     <title></title>
 </head>
 <body>
+    <main>
+        <div class="volver">
+            
+        </div>
+        <section class="imagen">
+
+        </section>
+        <div class="puntuacion">
+
+        </div>
+        <section class="contenedor">
+
+        </section>
+        <section class="navegacion">
+
+        </section>
+    </main>
 </body>
 </html>
