paginas html examen

--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
                 </section>
             </article>
         </a>
+        <a href="examen_10-07-25/restaurantes.html" tarjet="_blank">
+            <article class="tarjeta">
+                <section class="titulo">
+                    <h4>Examen</h4>
+                </section>
+                <section class="imagen">
+                    <img src="assets/imagenes/modix.jpg">
+                </section>
+                <section class="descripcion">
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique distinctio atque cumque, quia ratione excepturi vitae? Sed nam rem soluta iste porro similique quod dicta, voluptates delenit</p>
+                </section>
+            </article>
+        </a>
     </section>
 </body>
 </html>
