--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h4><span>Tp 03|</span>Shoku.</h4>
                 </section>
                 <section class="imagen">
-                    <img src="assets/imagenes/modix.jpg">
+                    <img src="tp03/css/img/logo.png">
                 </section>
                 <section class="descripcion">
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique distinctio atque cumque, quia ratione excepturi vitae? Sed nam rem soluta iste porro similique quod dicta, voluptates delenit</p>
