--- a/examen_10-07-25/menu.html
+++ b/examen_10-07-25/menu.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/fawesome-all.css">
     <link rel="stylesheet" href="css/menu.css">
 </head>
-<body>
+<body class="k2d-medium">
     <main>
         <section class="header">
             <a href="cafeteria.html"><i class="fa-light fa-arrow-left" id="flecha"></i></a>
@@ -67,9 +67,9 @@
                 <i class="fa-light fa-magnifying-glass"></i>
                 <span class="ico">Browse</span>
             </div>
-            <div class="icono">
+            <a href="orden.html"><div class="icono">
                 <i class="fa-thin fa-receipt"></i>
-                <span class="ico">Orders</span>
+                <span class="ico">Orders</span></a>
             </div>
             <div class="icono">
                 <i class="fa-thin fa-user"></i>
