--- a/examen_10-07-25/orden.html
+++ b/examen_10-07-25/orden.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/fawesome-all.css">
     <link rel="stylesheet" href="css/orden.css">
 </head>
-<body>
+<body class="k2d-medium">
     <main>
         <section class="header">
             <a href="cafeteria.html"><i class="fa-light fa-arrow-left" id="flecha"></i></a>
