--- a/examen_10-07-25/menu.html
+++ b/examen_10-07-25/menu.html
@@ -69,8 +69,8 @@
             </div>
             <a href="orden.html"><div class="icono">
                 <i class="fa-thin fa-receipt"></i>
-                <span class="ico">Orders</span></a>
-            </div>
+                <span class="ico">Orders</span>
+            </div></a>
             <div class="icono">
                 <i class="fa-thin fa-user"></i>
                 <span class="ico">Account</span>
